Add missing filenames, track/sector, and addresses to Color Coded Hex Dump

--- a/dos33.html
+++ b/dos33.html
@@ -8590,7 +8590,7 @@ Let the complete clusterfrak of bad design commence in <a class='link' href="htt
 2FD8:<span class="c21">DF 35 18 60 20 E4 2F A9</span> |_5.` d/)|
 2FE0:<span class="c21">01 4C 52 30 AC CB 35 AD</span> |.LR0,K5-|
 2FE8:<span class="c21">CC 35 8C F0 37 8D F1 37</span> |L5.p7.q7|
-2FF0:<span class="c21">AE D6 35 AC D7 35 60</span> <span class="c22">A9</span> |.V5,W5`)|
+2FF0:<span class="c21">AE D6 35 AC D7 35 60</span> <span class="c22">A9</span> |.V5,W5`)| FLOCNXB, T1SE - T2S0, $2FF7 .. $31C8
 2FF8:<span class="c22">01 D0 02 A9 02 AC C3 2A</span> |.P.).,C*|
 3000:<span class="c22">8C F0 37 AC C4 2A 8C F1</span> |.p7,D*.q| T1SF
 3008:<span class="c22">37 AE FA 35 A0 00 4C 52</span> |7.z5 .LR|
@@ -8649,7 +8649,7 @@ Let the complete clusterfrak of bad design commence in <a class='link' href="htt
 31B0:<span class="c22">03 EE C4 35 60 AC C1 35</span> |.nD5`,A5|
 31B8:<span class="c22">D0 08 AE C2 35 F0 07 CE</span> |P..B5p.N|
 31C0:<span class="c22">C2 35 CE C1 35 60 4C 7F</span> |B5NA5`L.|
-31C8:<span class="c22">33</span> <span class="c23">20 F7 2F AD C3 35 85</span> |3 w/-C5.|
+31C8:<span class="c22">33</span> <span class="c23">20 F7 2F AD C3 35 85</span> |3 w/-C5.| FLOCSEC, T2S0 - T2S2, $31C9 .. $3396 ($B1C9 .. $B396)
 31D0:<span class="c23">42 AD C4 35 85 43 A9 01</span> |B-D5.C).|
 31D8:<span class="c23">8D 9D 33 A9 00 8D D8 35</span> |..3)..X5|
 31E0:<span class="c23">18 EE D8 35 20 11 30 B0</span> |.nX5 .00|
@@ -8706,7 +8706,7 @@ Let the complete clusterfrak of bad design commence in <a class='link' href="htt
 3378:<span class="c23">ED 3F EA A9 0A D0 06 AD</span> |m?j).P.-|
 3380:<span class="c23">C5 35 18 90 01 38 08 8D</span> |E5...8..|
 3388:<span class="c23">C5 35 A9 00 85 48 20 7E</span> |E5)..H ~|
-3390:<span class="c23">2E 28 AE 9B 33 9A 60</span> <span class="c24">00</span> |.(..3.`.|
+3390:<span class="c23">2E 28 AE 9B 33 9A 60</span> <span class="c24">00</span> |.(..3.`.| FVCBUFS, T2S2 - T2S4, $3397 .. $35FD ($B397 .. $B5FD)
 3398:<span class="c24">00 00 00 00 00 00 00 00</span> |........|
 33A0:<span class="c24">00 00 FF FF 01 0A 64 D4</span> |......dT|
 33A8:<span class="c24">C9 C1 C2 D3 D2 C1 C2 A0</span> |IABSRAB |
@@ -8743,7 +8743,7 @@ Let the complete clusterfrak of bad design commence in <a class='link' href="htt
 34A0:<span class="c24">FE FC FC FC FC FC FE FC</span> |~|||||~||
 34A8:<span class="c24">FD FD FC FF FD FC FE FE</span> |}}|.}|~~|
 34B0:<span class="c24">FC FD FD FE FF FD FE FF</span> ||}}~.}~.|
-34B8:<span class="c24">FE FF FC 02 FC FD FC FC</span> |~.|.|}||| &lt;-- entire sector wasted for 1 byte!
+34B8:<span class="c24">FE FF FC 02 FC FD FC FC</span> |~.|.|}||| &larr; entire sector wasted for unreferenced 1 byte @ $34BB !!
 34C0:<span class="c24">FC FE FE FE FD FE FF FE</span> ||~~~}~.~|
 34C8:<span class="c24">FC FC FC FC FC FE FC FD</span> ||||||~|}|
 34D0:<span class="c24">FC FC FF FD FC FE FC FC</span> |||.}|~|||
@@ -9029,7 +9029,7 @@ Let the complete clusterfrak of bad design commence in <a class='link' href="htt
 3D90:<span class="c41">A0 04 B1 48 20 5A 3E 28</span> | .1H Z&gt;(|
 3D98:<span class="c41">D0 11 A4 47 10 0D A0 12</span> |P.$G.. .|
 3DA0:<span class="c41">88 D0 FD E6 46 D0 F7 E6</span> |.P}fFPwf|
-3DA8:<span class="c41">47 D0 F3</span> <span class="c42">A0 0C B1 48 F0</span> |GPs .1Hp|
+3DA8:<span class="c41">47 D0 F3</span> <span class="c42">A0 0C B1 48 F0</span> |GPs .1Hp| RWTSTWO, T0S7 - T0S8, $3DAB .. $3EAE ($BDAB .. $BEAE)
 3DB0:<span class="c42">5A C9 04 F0 58 6A 08 B0</span> |ZI.pXj.0|
 3DB8:<span class="c42">03 20 00 38 A0 30 8C 78</span> |. .8 0.x|
 3DC0:<span class="c42">05 AE F8 05 20 44 39 90</span> |..x. D9.|
@@ -9061,7 +9061,7 @@ Let the complete clusterfrak of bad design commence in <a class='link' href="htt
 3E90:<span class="c42">4A 4A 4A A8 60 48 A0 02</span> |JJJ(`H .|
 3E98:<span class="c42">B1 48 6A 66 35 20 8E 3E</span> |1Hjf5 .&gt;|
 3EA0:<span class="c42">68 0A 24 35 30 05 99 F8</span> |h.$50..x|
-3EA8:<span class="c42">04 10 03 99 78 04 60</span> <span class="c43">A0</span> |....x.` |
+3EA8:<span class="c42">04 10 03 99 78 04 60</span> <span class="c43">A0</span> |....x.` | FORMATR, T0S8 - T0S9, $3EAF .. $3FC7 ($BEAF .. $BFC7)
 3EB0:<span class="c43">03 B1 48 85 41 A9 AA 85</span> |.1H.A)*.|
 3EB8:<span class="c43">3E A0 56 A9 00 85 44 99</span> |&gt; V)..D.|
 3EC0:<span class="c43">FF 3B 88 D0 FA 99 00 3B</span> |.;.Pz..;|
@@ -9097,7 +9097,7 @@ Let the complete clusterfrak of bad design commence in <a class='link' href="htt
 3FB0:<span class="c43">00 00 00 00 00 00 00 00</span> |........|
 3FB8:<span class="c43">00 0D 0B 09 07 05 03 01</span> |........|
 3FC0:<span class="c43">0E 0C 0A 08 06 04 02 0F</span> |........|
-3FC8:<span class="c44">20 93 FE AD 81 C0 AD 81</span> | .~-.@-.|
+3FC8:<span class="c44">20 93 FE AD 81 C0 AD 81</span> | .~-.@-.| DOSPTCH, T0S9, $3FC8 .. $3FFF ($BFC8 .. $BFFF)
 3FD0:<span class="c44">C0 A9 00 8D 00 E0 20 76</span> |@)...` v|
 3FD8:<span class="c44">3A 4C 44 37 8D 63 2A 8D</span> |:LD7.c*.|
 3FE0:<span class="c44">70 2A 8D 71 2A 60 20 5B</span> |p*.q*` [|
