Add link to Color Coded Hex Dump, Fix link Color Coded Source File

--- a/dos33.html
+++ b/dos33.html
@@ -632,7 +632,8 @@ console.log( "TODO: CSS Monochrome" );
         <li>2.0 Miscellaneous Information               </li>
         <ul class="toc">
             <li>2.1 Statistics                          </li>
-            <li>2.2 Color-Coded Memory by Source File   </li>
+            <li>2.2 <a class='link' href='#ColorSrcFile'>Color-Coded Memory by Source File</a> </li>
+            <li>2.3 <a class='link' href='#ColorHexDump'>Color-Coded Hex Dump</a>              </li>
         </ul>
         <li>3.0 <a class='link' href='#Inefficiencies'     >Inefficiencies</a>                 </li>
         <ul class="toc">
@@ -7877,7 +7878,7 @@ Let the complete clusterfrak of bad design commence in <a class='link' href="htt
 
 
 
-<h1><a class='section' name='ColorMemory'>Color-Coded Memory by Source File</a></h1>
+<h1><a class='section' name='ColorSrcFile'>Color-Coded Memory by Source File</a></h1>
 <!--
     :%s/</\&lt;/g
     :%s/>/\&gt;/g
@@ -7919,6 +7920,7 @@ Let the complete clusterfrak of bad design commence in <a class='link' href="htt
 
 <img src="color_memory_usage_filename.png">
 
+<h1><a class='section' name='ColorHexDump'>Color-Coded Hex Dump</a></h1>
 <pre>
 1B00:<span class="c00">4C 84 1D A9 BF 85 41 A2</span> |L..)?.A"| RELOCTR, $1B00 .. $1CFF, T0SA - T0SB
 1B08:<span class="c00">00 86 40 A0 00 A1 40 85</span> |..@ .!@.|
