--- a/dos33.html
+++ b/dos33.html
@@ -3489,7 +3489,7 @@ With that "legalese" out of the way ... enjoy the read!
 2AAB:A0 A0 A0 A0
 2AAF:A0 A0
 2AB1:03             040 <a class="d" name="DFNFTS">DFNFTS      </a>DFB <span class='n'>3</span>           ; DEFAULT FILE TABLES = 3       ; <a class="x" href="#INITD">INITD</a> copies to <a class="v" href="#CNFTBS">CNFTBS</a>
-2AB2:84             041 <a class="d" name="CCHAR" >CCHAR       </a>DFB $<span class='n'>84</span>         ; CONTROL CHAR                  ; Control-D actives DOS for next ASCII command <a class='magic'>magic number</a> CTRL_D_HI
+2AB2:84             041 <a class="d" name="CCHAR" >CCHAR       </a>DFB $<span class='n'>84</span>         ; CONTROL CHAR                  ; Control-D actives DOS for next ASCII command <a class='magic'>magic number</a> KEY_CTRL_D
 2AB3:00             042 <a class="d" name="ESTATE">ESTATE      </a>DFB <span class='n'>0</span>           ; EXECUTE STATE
 2AB4:00 00          043 <a class="d" name="EFTABA">EFTABA      </a>DFB <span class='n'>0</span>,<span class='n'>0</span>         ; EXECUTE FILE TABLE POINTER
 2AB6:00             044 <a class="d" name="ASIBSW">ASIBSW      </a>DFB <span class='n'>0</span>           ; APPLESOFT, IB SWITCH          ; <a class="x" href="#TSTRUN">00=Integer</a>, <a class="x" href="#IAS1">40=Applesoft ROM</a>, 80=Applesoft RAM
