--- a/dos33.html
+++ b/dos33.html
@@ -3327,17 +3327,20 @@ With that "legalese" out of the way ... enjoy the read!
                     093 ;                                                           
                     094 ; OPTAB - OPTIONAL PARMS SYNTAX TABLES                      
                     095 ;                                                           
-                    096 <a class='d' name='OPTAB1'   >OPTAB1      </a>EQU *                                           ; It would be better to <i>interleave</i> OPTAB1 and OPTAB2 to prevent synchronization mistakes:
-2941:D6 C4 D3 CC    097             DFB 'V'+$80,'D'+$80,'S'+$80,'L'+$80'            ;    DFB 'V'+$80, V
-2945:D2 C2 C1 C3    098             DFB 'R'+$80,'B'+$80,'A'+$80,'C'+$80'            ;    DFB 'D'+$80, D         ; /sarcasm Apparently <span class='code'>MSB ON</span> was broken
-2949:C9 CF          099             DFB 'I'+$80,'O'+$80'                            ;    DFB 'S'+$80, S         ; What's the point of compacting the lines?
-                    100 <a class='d' name='OPT1L'    >OPT1L       </a>EQU *-OPTAB1                                    ;    DFB 'L'+$80, L
-                    101 <a class='e' name='MI'       >MI          </a>EQU $<span class='n'>20</span>                                         ;    DFB 'R'+$80, R         ; <span class='todo'>TODO</span> does MI alias FN1? See <a class='x' href='#DRTNI'>DRTNI</a>
-                    102 <a class='e' name='MO'       >MO          </a>EQU $<span class='n'>10</span>                                         ;    DFB 'B'+$80, B         ; <span class='todo'>TODO</span> does MO alias FN2? See <a class='x' href='#DRTNO'>DRTNO</a>
-                    103 <a class='d' name='OPTAB2'   >OPTAB2      </a>EQU *                                           ;    DFB 'A'+$80, ADR
-294B:40 20 10 08    104             DFB V,D,S,L                                     ;    DFB 'C'+$80, CIO+MC    ; MC was defined in <a class='file' href='#FDOSENT'>FDOSENT</a>, <a class='e' href='#MC'>MC</a>
-294F:04 02 01 C0    105             DFB R,B,ADR,CIO+MC                              ;    DFB 'I'+$80, CIO+MI    ; CIO = FLAG_CIO = $80 = minus, See <a class='e' href='#CIO'>CIO</a>, <a class='file' href='#CMDSCAN'>CMDSCAN</a>, Line #<a class='line' href='#CMDSCAN.204'>204</a>, and <a class='v' href='#OPTAB2'>OPTAB2</a>
-2953:A0 90          106             DFB CIO+MI,CIO+MO                               ;    DFB 'O'+$80, CIO+MO
+                    096 <a class='d' name='OPTAB1'   >OPTAB1      </a>EQU *                                           ; <b>Problem</b>:  Keeping 2 tables in sync can lead to subtle bugs.
+                                                                                    ; <b>Solution</b>: It would be better to <i>interleave</i> OPTAB1 and OPTAB2 
+                                                                                    ;           to prevent synchronization mistakes:
+                                                                                    ;    MSB ON
+2941:D6 C4 D3 CC    097             DFB 'V'+$80,'D'+$80,'S'+$80,'L'+$80'            ;    DFB 'V', V         ; /sarcasm Apparently <span class='code'>MSB ON</span> was broken
+2945:D2 C2 C1 C3    098             DFB 'R'+$80,'B'+$80,'A'+$80,'C'+$80'            ;    DFB 'D', D
+2949:C9 CF          099             DFB 'I'+$80,'O'+$80'                            ;    DFB 'S', S         ; What's the point of compacting the lines???
+                    100 <a class='d' name='OPT1L'    >OPT1L       </a>EQU *-OPTAB1                                    ;    DFB 'L', L         ; You write code for HUMANS not computers.
+                    101 <a class='e' name='MI'       >MI          </a>EQU $<span class='n'>20</span>                                         ;    DFB 'R', R         ; <span class='todo'>TODO</span> does MI alias FN1? See <a class='x' href='#DRTNI'>DRTNI</a>
+                    102 <a class='e' name='MO'       >MO          </a>EQU $<span class='n'>10</span>                                         ;    DFB 'B', B         ; <span class='todo'>TODO</span> does MO alias FN2? See <a class='x' href='#DRTNO'>DRTNO</a>
+                    103 <a class='d' name='OPTAB2'   >OPTAB2      </a>EQU *                                           ;    DFB 'A', ADR
+294B:40 20 10 08    104             DFB V,D,S,L                                     ;    DFB 'C', CIO+MC    ; MC was defined in <a class='file' href='#FDOSENT'>FDOSENT</a>, <a class='e' href='#MC'>MC</a>
+294F:04 02 01 C0    105             DFB R,B,ADR,CIO+MC                              ;    DFB 'I', CIO+MI    ; CIO = FLAG_CIO = $80 = minus
+2953:A0 90          106             DFB CIO+MI,CIO+MO                               ;    DFB 'O', CIO+MO    ; See <a class='e' href='#CIO'>CIO</a>, <a class='file' href='#CMDSCAN'>CMDSCAN</a>, Line #<a class='line' href='#CMDSCAN.204'>204</a>, and <a class='v' href='#OPTAB2'>OPTAB2</a>
                     107 <a class='d' name='OPTAB3'   >OPTAB3      </a>EQU *                                           ; /sarcasm Yay for more crappy table formatting and naming
                                                                                     ;              [Min, Max]
                                                                                     ; OptValMin  DW    0         ; Volume
@@ -3354,7 +3357,7 @@ With that "legalese" out of the way ... enjoy the read!
 295B:02 00          111             DW <span class='n'>2</span>            ; DRIVE RANGE
 295D:01 00          112             DW <span class='n'>1</span>                                            ; [2]
 295F:07 01          113             DW <span class='n'>7</span>            ; SLOT RANGE
-2961:01 00          114             DW <span class='n'>1</span>                                            ; [3]             <span class='code'>BSAVE FOO,A$0,L$C000</span> won't work without patching DOS
+2961:01 00          114             DW <span class='n'>1</span>                                            ; [3]             <span class='code'>BSAVE MEM.48K,A$0,L$C000</span> won't work without patching DOS
 <hr>2963:FF 7F          115             DW <span class='n'>32767</span>        ; LENGTH RANGE                  ; === Page <a class='page' name='page23'>23</a> === A963:FF BF to save &gt; 32KB (48KB)
 2965:00 00          116             DW <span class='n'>0</span>                                            ; [4]
 2967:FF 7F          117             DW <span class='n'>32767</span>        ; REC NO RANGE
@@ -3463,10 +3466,10 @@ With that "legalese" out of the way ... enjoy the read!
                     027 <a class="d" name="CUROPT">CUROPT      </a>EQU *           ; CURRENT OPTIONS               ; /sarcasm So we <i>can</i> type CUR ... but too lazy to type CUR_VOL, CUR_DRV, CUR_SLT??
                                                                                     ; <span class='note'>Note</span>: OPTAB3 and CUROPT must be keep in size sync! 
 2A66:00 00          028 <a class="d" name="CV"    >CV          </a>DW <span class='n'>0</span>            ; VOLUME                        ; [0] normally <a class='mem' name='_2A67'>wastes</a> 1 byte; all numbers 16-bit, See CMDSCAN, Line #<a class='line' href='#CMDSCAN.239'>239</a>
-2A68:00 00          029 <a class="d" name="CD"    >CD          </a>DW <span class='n'>0</span>            ; DRIVE                         ; [2] normally <a class='mem' name='_2A69'>wastes</a> 1 byte, all numbers 16-bit, See CMDSCAN, Line #<a class='line' href='#CMDSCAN.239'>239</a>
-2A6A:00 00          030 <a class="d" name="CS"    >CS          </a>DW <span class='n'>0</span>            ; SLOT                          ; [4] normally <a class='mem' name='_2A6B'>wastes</a> 1 byte, all numbers 16-bit, /sarcasm Because <a class="x" href="#DBINIT">DBINIT</a> <a class="x" href="#OPNSUP">OPNSUP</a> need 2 bytes, right?
-2A6C:01 00          031 <a class="d" name="CL"    >CL          </a>DW <span class='n'>1</span>            ; RECORD LENGTH                 ; [6]
-2A6E:00 00          032 <a class="d" name="CR"    >CR          </a>DW <span class='n'>0</span>            ; RECORD NUMBER                 ; [8]
+2A68:00 00          029 <a class="d" name="CD"    >CD          </a>DW <span class='n'>0</span>            ; DRIVE                         ; [2] normally <a class='mem' name='_2A69'>wastes</a> 1 byte, all numbers 16-bit, /sarcasm because <a class="x" href="#DBINIT">DBINIT</a>, <a class="x" href="#OPNSUP">OPNSUP</a>
+2A6A:00 00          030 <a class="d" name="CS"    >CS          </a>DW <span class='n'>0</span>            ; SLOT                          ; [4] normally <a class='mem' name='_2A6B'>wastes</a> 1 byte, all numbers 16-bit,      need 2 bytes bytes, right?
+2A6C:01 00          031 <a class="d" name="CL"    >CL          </a>DW <span class='n'>1</span>            ; RECORD LENGTH                 ; [6]               
+2A6E:00 00          032 <a class="d" name="CR"    >CR          </a>DW <span class='n'>0</span>            ; RECORD NUMBER                 ; [8] Not Carriage Return, but Current Record. /sarcasm Obvious, right?
 2A70:00 00          033 <a class="d" name="CB"    >CB          </a>DW <span class='n'>0</span>            ; RECORD BYTE                   ; [A]
 2A72:00 00          034 <a class="d" name="CA"    >CA          </a>DW <span class='n'>0</span>            ; ADDRESS                       ; [C] $AA72:Address of last BLOAD
 2A74:00             035 <a class="d" name="IMBITS">IMBITS      </a>DFB <span class='n'>0</span>                                           ; <span class='todo'>TODO</span>: Input Monitor Bits??? Used in <a class='x' href='#EMON'>EMON</a>
